prod-consumer-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-cons-ui-deploy
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: denimallel/prod-cons-web:imageVersion
        ports:
        - containerPort: 80
