prod-consumer-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prod-cons-ui-service
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 8080
    targetPort: 80
